<resources>
    <string name="app_name">geeknew</string>
    <string name="geek">GeekNews</string>
    <string name="pure">A pure reading App for you</string>
    <string name="zhihu">知乎日报</string>
    <string name="wechat">微信精选</string>
    <string name="gank">干货集中营</string>
    <string name="gold">稀土掘金</string>
    <string name="v2ex">V2EX</string>
    <string name="collect">收藏</string>
    <string name="settings">设置</string>
    <string name="about">关于</string>
    <string name="options">选项</string>
    <string name="info">资讯</string>
    <string name="toolbat_title">知乎日报</string>
    <string name="dailyNews">日报</string>
    <string name="theme">主题</string>
    <string name="sections">专栏</string>
    <string name="hot">热门</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="specia_show">首页特别展示</string>
</resources>
